--- a/src/index.css
+++ b/src/index.css
@@ -1110,7 +1110,13 @@ textarea::placeholder {
   html {
     font-size: 50%;
   }
-
+  .right-block-women-card {
+    width: 100%;
+    margin-left: 0.5rem;
+  }
+  .grid-50-50 {
+    grid-template-columns: 1fr;
+  }
   .aboutus-description {
     font-size: 2.6rem;
   }
@@ -1245,6 +1251,9 @@ textarea::placeholder {
 @media only screen and (max-width: 30.125em) {
   .grid-50-50 {
     padding: 1rem;
+  }
+  .reservation-container {
+    padding: 2rem;
   }
 }
 
