--- a/src/index.css
+++ b/src/index.css
@@ -166,7 +166,6 @@ li {
     opacity: 0;
   }
 }
-
 @keyframes fadeOut {
   0% {
     opacity: 0;
@@ -211,7 +210,6 @@ li {
     width: 0;
   }
 }
-
 @keyframes go-left {
   0% {
     left: 0;
@@ -286,7 +284,6 @@ li {
     transform: translateX(-8rem);
   }
 }
-
 @keyframes loadNow {
   0% {
     opacity: 0;
@@ -378,7 +375,6 @@ li {
     width: 64%;
   }
 }
-
 @keyframes expandNow {
   0% {
     width: 0%;
@@ -496,7 +492,6 @@ li {
     width: 0;
   }
 }
-
 @keyframes rev-img {
   0% {
     left: 0;
@@ -611,7 +606,7 @@ li {
 
 .right-block-women-card {
   padding: 4.5rem;
-  margin-left: 6.5rem;
+  margin-left: 7rem;
   width: 70%;
 }
 .right-block-women-card .styled {
@@ -653,7 +648,6 @@ li {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   justify-items: center;
-
   padding: 0rem 0rem 5rem 0;
 }
 
@@ -684,13 +678,18 @@ li {
   margin-bottom: 4rem;
   font-family: "Great Vibes", cursive;
 }
+
 #comment {
   padding: 10rem;
 }
+
 .comments {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   font-size: 1.6rem;
   margin-top: 4rem;
@@ -732,8 +731,14 @@ li {
 }
 
 .location-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
   align-items: flex-end;
 }
 
@@ -897,24 +902,36 @@ textarea::placeholder {
 /**************************** FOOTER ****************************/
 .footer-flex-informations {
   margin-top: 14rem;
-  display: flex;
-  gap: 3rem;
+  display: grid;
+  gap: 1.2rem;
+  grid-auto-flow: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   color: var(--color-white-100);
-  margin-bottom: 2rem;
+  margin-bottom: 2.5rem;
 }
 
 .footer-flex-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   gap: 2.5rem;
   color: var(--color-white-100);
 }
 
 .footer-information {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   color: var(--color-white-100);
 }
 .footer-information:hover {
@@ -1007,7 +1024,6 @@ textarea::placeholder {
   .caption-about {
     font-size: 4.8rem;
   }
-
   .aboutus-description {
     font-size: 2.4rem;
   }
@@ -1017,7 +1033,6 @@ textarea::placeholder {
   .caption-gallery {
     font-size: 4.8rem;
   }
-
   .thoughts-caption {
     font-size: 4.8rem;
   }
@@ -1099,20 +1114,20 @@ textarea::placeholder {
     font-size: 2rem;
   }
   .footer-information {
-    font-size: 1.4rem;
+    font-size: 1.35rem;
   }
   .footer-copyrights {
-    font-size: 1.4rem;
+    font-size: 1.35rem;
   }
 }
-
 @media only screen and (max-width: 62.5em) {
   html {
     font-size: 50%;
   }
   .right-block-women-card {
+    padding: 4.5rem;
+    margin-left: -1rem;
     width: 100%;
-    margin-left: 0.5rem;
   }
   .grid-50-50 {
     grid-template-columns: 1fr;
@@ -1121,9 +1136,11 @@ textarea::placeholder {
     font-size: 2.6rem;
   }
   .first-block {
+    -webkit-animation: none;
     animation: none;
   }
   .second-block {
+    -webkit-animation: none;
     animation: none;
   }
   .caption-about {
@@ -1137,6 +1154,20 @@ textarea::placeholder {
   }
   .img img {
     width: 45rem;
+  }
+  @-webkit-keyframes rev-img {
+    0% {
+      left: 0;
+      width: 0%;
+    }
+    50% {
+      width: 45rem;
+      left: 0;
+    }
+    100% {
+      left: 45rem;
+      width: 0;
+    }
   }
   @keyframes rev-img {
     0% {
@@ -1157,7 +1188,6 @@ textarea::placeholder {
   }
   .right-block-women-card {
     width: 100%;
-    margin-left: 0.5rem;
   }
   .grid-50-50 {
     grid-template-columns: 1fr;
@@ -1180,10 +1210,25 @@ textarea::placeholder {
   .img {
     top: 40%;
     right: 25%;
+    -webkit-transform: translate(50%, -50%);
     transform: translate(50%, -50%);
   }
   .img img {
     width: 40rem;
+  }
+  @-webkit-keyframes rev-img {
+    0% {
+      left: 0;
+      width: 0%;
+    }
+    50% {
+      width: 40rem;
+      left: 0;
+    }
+    100% {
+      left: 40rem;
+      width: 0;
+    }
   }
   @keyframes rev-img {
     0% {
@@ -1222,12 +1267,27 @@ textarea::placeholder {
     padding: 5rem;
   }
   .img {
-    top: 32%;
-    right: 44%;
+    top: 31%;
+    right: 41%;
+    -webkit-transform: translate(50%, -50%);
     transform: translate(50%, -50%);
   }
   .img img {
     width: 30rem;
+  }
+  @-webkit-keyframes rev-img {
+    0% {
+      left: 0;
+      width: 0%;
+    }
+    50% {
+      width: 30rem;
+      left: 0;
+    }
+    100% {
+      left: 30rem;
+      width: 0;
+    }
   }
   @keyframes rev-img {
     0% {
@@ -1246,12 +1306,12 @@ textarea::placeholder {
   .grid-50-50 {
     padding: 1rem;
   }
-
   .heading {
     font-size: 3rem;
   }
   .women-title {
-    font-size: 3.6rem;
+    font-size: 3.2rem;
+    top: 2rem;
   }
   .caption-gallery {
     font-size: 3.6rem;
@@ -1291,16 +1351,36 @@ textarea::placeholder {
   .reservation-contactus {
     padding: 2rem;
   }
+  .left-block-women-card {
+    min-height: 80vh;
+    justify-self: center;
+  }
+  .right-block-women-card {
+    width: 100%;
+    margin-left: 0rem;
+    justify-self: center;
+  }
 }
 @media only screen and (max-width: 30.125em) {
   .grid-50-50 {
     padding: 1rem;
   }
+  .left-block-women-card {
+    min-height: 75vh;
+    justify-self: center;
+  }
+  .right-block-women-card {
+    width: 85%;
+    margin-left: 0rem;
+    justify-self: center;
+  }
   .reservation-contactus {
     padding: 2rem;
   }
+  .container-grid-women {
+    grid-template-columns: 1fr;
+  }
 }
-
 @media only screen and (max-width: 24.6875em) {
   .grid-50-50 {
     padding: 1rem;
@@ -1315,28 +1395,29 @@ textarea::placeholder {
     font-size: 3rem;
   }
   .women-title {
+    left: 20%;
     font-size: 3.6rem;
   }
   .caption-gallery {
     font-size: 3.6rem;
   }
   .caption-about {
-    font-size: 2.8rem;
+    font-size: 3rem;
   }
   .location-caption {
-    font-size: 2.8rem;
+    font-size: 3rem;
   }
   .caption-menu {
-    font-size: 2.8rem;
+    font-size: 3rem;
   }
   .thoughts-caption {
-    font-size: 2.8rem;
+    font-size: 3rem;
   }
   .caption-testimonial {
-    font-size: 2.8rem;
+    font-size: 3rem;
   }
   .reservation-caption-up {
-    font-size: 2.8rem;
+    font-size: 3rem;
   }
   .aboutus-description {
     font-size: 1.6rem;
@@ -1346,17 +1427,17 @@ textarea::placeholder {
     grid-template-columns: 1fr;
   }
   .left-block-women-card {
-    min-height: 75vh;
+    min-height: 70vh;
     justify-self: center;
   }
   .right-block-women-card {
-    width: 95%;
+    width: 85%;
+    margin-left: 0rem;
     justify-self: center;
   }
   #comment {
     padding: 2rem;
   }
-
   #menu {
     padding: 3rem;
   }
