--- a/src/index.sass
+++ b/src/index.sass
@@ -1,3 +1,476 @@
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Great+Vibes&family=Monoton&family=Roboto+Mono:wght@400;500;600;700&display=swap")
+:root
+  --color-primary-100: rgb(11, 19, 21)
+  --color-primary-200: rgb(15, 29, 34)
+  --color-secondary-100: rgb(200, 170, 128)
+  --color-secondary-200: rgb(222, 204, 179)
+  --color-tertiary-200: rgb(114, 93, 68)
+  --color-white-100: rgba(223, 220, 220, 0.933)
+  --color-white-200: rgba(244, 244, 244, 1)
+  --color-gray-100: rgb(169, 169, 169)
+  --color-gray-200: rgb(156, 156, 164)
+
+*,
+*::before,
+*::after
+  margin: 0
+  padding: 0
+  -webkit-box-sizing: border-box
+  box-sizing: border-box
+
+html
+  font-family: "Roboto Mono", monospace
+  font-weight: 400
+  font-size: 62.5%
+
+body
+  background-color: var(--color-primary-100)
+
+html,
+body
+  width: 100%
+  overflow-x: hidden
+
+h1,
+h2
+  font-weight: 400
+
+ul,
+ol
+  list-style: none
+  margin: 0
+  padding: 0
+
+p
+  font-weight: 400
+  font-size: 1.8rem
+
+a
+  color: var(--color-secondary-100)
+  text-decoration: none
+  font-size: 1.6rem
+  font-weight: 400
+
+li
+  font-size: 1.6rem
+
+/****************************  HELPER CLASSES  ****************************/
+.sm-margin-top
+  margin-top: 1rem
+
+.m-margin-top
+  margin-top: 2.5rem
+
+.mdm-margin-top
+  margin-top: 4rem
+
+.mds-margin-top
+  margin-top: 6rem
+
+.lg-margin-top
+  margin-top: 8rem
+
+.xlg-margin-top
+  margin-top: 10rem
+
+.xxlg-margin-top
+  margin-top: 14rem
+
+.md-margin-bottom
+  margin-bottom: 1rem
+
+.mds-margin-bottom
+  margin-bottom: 2rem
+
+.mdm-margin-bottom
+  margin-bottom: 10rem
+
+.lg-margin-bottom
+  margin-bottom: 15rem
+
+.xxlg-margin-bottom
+  margin-bottom: 25rem
+
+.s-padding
+  padding: 3.9rem
+
+.sm-padding
+  padding: 4rem
+
+.md-padding
+  padding: 5rem
+
+.xlg-padding
+  padding: 10rem
+
+/****************************  HERO CONTENT  ****************************/
+.container-hero
+  width: 100%
+  height: 100vh
+
+.temp
+  position: absolute
+  width: 100%
+  height: 100vh
+  background-color: var(--color-primary-100)
+  background-size: cover
+  -webkit-animation: fadeOut 5s linear forwards
+  animation: fadeOut 5s linear forwards
+  opacity: 1
+
+@-webkit-keyframes fadeOut
+  0% 
+  opacity: 0
+
+  40% 
+  opacity: 0
+
+  41% 
+  opacity: 1
+
+  91% 
+  opacity: 1
+
+  92% 
+  opacity: 0
+
+  100% 
+  opacity: 0
+
+@keyframes fadeOut
+  0%
+    opacity: 0
+
+  40%
+    opacity: 0
+
+  41%
+    opacity: 1
+
+  91%
+    opacity: 1
+
+  92%
+    opacity: 0
+
+  100%
+    opacity: 0
+
+.first-block
+  position: absolute
+  width: 0
+  height: 100vh
+  background-color: var(--color-white-200)
+  -webkit-animation: go-left 4s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards
+  animation: go-left 4s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards
+  left: 0
+
+@-webkit-keyframes go-left
+  0% 
+  left: 0
+  width: 0%
+
+  50% 
+  left: 0
+  width: 100%
+
+  100% 
+  left: 100%
+  width: 0
+
+@keyframes go-left
+  0%
+    left: 0
+    width: 0%
+
+  50%
+    left: 0
+    width: 100%
+
+  100%
+    left: 100%
+    width: 0
+
+.second-block
+  position: absolute
+  width: 0
+  height: 100vh
+  background-color: var(--color-tertiary-200)
+  -webkit-animation: go-left 3.2s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards
+  animation: go-left 3.2s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards
+  -webkit-animation-delay: 3s
+  animation-delay: 3s
+
+.loader
+  position: absolute
+  top: 50%
+  left: 50%
+  -webkit-transform: translate(-50%, -50%)
+  transform: translate(-50%, -50%)
+
+  & ul
+    list-style: none
+    margin: 0
+    padding: 0
+
+  & ul li
+    display: inline-block
+    color: var(--color-white-100)
+    font-family: inherit
+    font-weight: bolder
+    margin: 0 0.8rem
+    font-size: 2rem
+    text-transform: uppercase
+    -webkit-animation: loadNow 4s ease-in-out forwards
+    animation: loadNow 4s ease-in-out forwards
+    opacity: 0
+    -webkit-transform: translateX(0rem)
+    transform: translateX(0rem)
+
+@-webkit-keyframes loadNow
+  0% 
+  opacity: 0
+  -webkit-transform: translateX(8rem)
+  transform: translateX(8rem)
+
+  20% 
+  opacity: 1
+  -webkit-transform: translateX(0rem)
+  transform: translateX(0rem)
+
+  80% 
+  opacity: 1
+  -webkit-transform: translateX(0rem)
+  transform: translateX(0rem)
+
+  100% 
+  opacity: 0
+  -webkit-transform: translateX(-8rem)
+  transform: translateX(-8rem)
+
+@keyframes loadNow
+  0%
+    opacity: 0
+    -webkit-transform: translateX(8rem)
+    transform: translateX(8rem)
+
+  20%
+    opacity: 1
+    -webkit-transform: translateX(0rem)
+    transform: translateX(0rem)
+
+  80%
+    opacity: 1
+    -webkit-transform: translateX(0rem)
+    transform: translateX(0rem)
+
+  100%
+    opacity: 0
+    -webkit-transform: translateX(-8rem)
+    transform: translateX(-8rem)
+
+.loader ul li:nth-child(1)
+  -webkit-animation-delay: 1.05s
+  animation-delay: 1.05s
+
+.loader ul li:nth-child(2)
+  -webkit-animation-delay: 1.1s
+  animation-delay: 1.1s
+
+.loader ul li:nth-child(3)
+  -webkit-animation-delay: 1.15s
+  animation-delay: 1.15s
+
+.loader ul li:nth-child(4)
+  -webkit-animation-delay: 1.2s
+  animation-delay: 1.2s
+
+.loader ul li:nth-child(5)
+  -webkit-animation-delay: 1.25s
+  animation-delay: 1.25s
+
+.loader ul li:nth-child(6)
+  -webkit-animation-delay: 1.3s
+  animation-delay: 1.3s
+
+.loader ul li:nth-child(7)
+  -webkit-animation-delay: 1.35s
+  animation-delay: 1.35s
+
+.loader ul li:nth-child(8)
+  -webkit-animation-delay: 1.4s
+  animation-delay: 1.4s
+
+.loader ul li:nth-child(9)
+  -webkit-animation-delay: 1.45s
+  animation-delay: 1.45s
+
+.loader ul li:nth-child(10)
+  -webkit-animation-delay: 1.5s
+  animation-delay: 1.5s
+
+.third-block
+  position: absolute
+  width: 0%
+  height: 100%
+  background: var(--color-primary-200)
+  -webkit-animation: expandNow 1.4s cubic-bezier(0.19, 1, 0.22, 1) forwards
+  animation: expandNow 1.4s cubic-bezier(0.19, 1, 0.22, 1) forwards
+  -webkit-animation-delay: 6.2s
+  animation-delay: 6.2s
+
+@-webkit-keyframes expandNow
+  0% 
+  width: 0%
+
+  100% 
+  width: 64%
+
+@keyframes expandNow
+  0%
+    width: 0%
+
+  100%
+    width: 64%
+
+.menu
+  position: absolute
+  right: 0
+  margin: 3rem
+
+.logo
+  position: absolute
+  left: 0
+  margin: 2rem
+
+  & img
+    opacity: 0
+    -webkit-animation: appearimg 0.1s linear forwards
+    animation: appearimg 0.1s linear forwards
+    -webkit-animation-delay: 6.4s
+    animation-delay: 6.4s
+
+.content
+  position: absolute
+  width: 50rem
+  top: 46%
+  left: 28%
+  -webkit-transform: translate(-50%, -50%)
+  transform: translate(-50%, -50%)
+  text-align: left
+
+.heading
+  font-family: "Great Vibes", cursive
+  font-weight: bolder
+  font-size: 4.2rem
+  line-height: 1
+  color: var(--color-secondary-100)
+
+.desc
+  font-family: inherit
+  font-weight: bolder
+
+  & p
+    margin-top: 3rem
+    margin-bottom: 3rem
+    color: var(--color-white-100)
+    font-size: 2rem
+    font-weight: 800
+    line-height: 1.4
+
+.button-hero
+  font-family: inherit
+  border: none
+  padding: 1.6rem 4rem
+  letter-spacing: 0.2rem
+  text-transform: uppercase
+  background-color: var(--color-secondary-100)
+  cursor: pointer
+
+  &:hover
+    background-color: var(--color-secondary-200)
+
+.img img
+  width: 50rem
+  height: 100%
+  opacity: 0
+  -webkit-animation: appearimg 0.1s linear forwards
+  animation: appearimg 0.1s linear forwards
+  -webkit-animation-delay: 6.4s
+  animation-delay: 6.4s
+
+.img
+  position: absolute
+  z-index: 1000
+  top: 50%
+  right: 14%
+  -webkit-transform: translateY(-65%)
+  transform: translateY(-65%)
+
+  &::after
+    content: ""
+    top: 0
+    left: 0
+    width: 0%
+    height: 100%
+    position: absolute
+    background: var(--color-tertiary-200)
+    -webkit-animation: rev-img 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards
+    animation: rev-img 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards
+    -webkit-animation-delay: 6s
+    animation-delay: 6s
+
+@-webkit-keyframes rev-img
+  0% 
+  left: 0
+  width: 0%
+
+  50% 
+  width: 50rem
+  left: 0
+
+  100% 
+  left: 50rem
+  width: 0
+
+@keyframes rev-img
+  0%
+    left: 0
+    width: 0%
+
+  50%
+    width: 50rem
+    left: 0
+
+  100%
+    left: 50rem
+    width: 0
+
+@-webkit-keyframes appearimg
+  0% 
+  opacity: 0
+
+  100% 
+  opacity: 1
+
+@keyframes appearimg
+  0%
+    opacity: 0
+
+  100%
+    opacity: 1
+
+.media ul
+  list-style: none
+  position: absolute
+  bottom: 0
+  right: 2.4rem
+  padding: 1rem
+
+  & li
+    margin: 2.4rem 0
+
+/**************************** ABOUT US ****************************/
 .caption-about
   font-size: 6.4rem
   color: var(--color-secondary-100)
@@ -45,7 +518,7 @@
   font-weight: 400
 
 .left-block-women-card
-  width: 75%
+  width: 80%
   background-color: var(--color-primary-200)
   color: var(--color-white-100)
   min-height: 100%
@@ -63,10 +536,9 @@
   padding: 2rem
 
 .right-block-women-card
-  display: flex
-  place-content: center
-  padding: 2rem
-  width: 85%
+  padding: 4.5rem
+  margin-left: 7rem
+  width: 70%
 
   & .styled
     width: 5rem
@@ -95,15 +567,13 @@
   font-size: 6.4rem
   color: var(--color-secondary-100)
   text-align: center
-  margin-top: 10rem
+  margin-top: 5rem
   font-family: "Great Vibes", cursive
 
 .menu-grid
-  display: -webkit-box
-  display: -ms-flexbox
   display: grid
   grid-template-columns: repeat(2, 1fr)
-  place-items: center
+  justify-items: center
 
   padding: 0rem 0rem 5rem 0
 
@@ -161,7 +631,7 @@
 .thoughts-caption
   text-align: left
   margin-top: 10rem
-  font-size: 5.6rem
+  font-size: 5.4rem
   font-weight: 400
   line-height: 2
   color: var(--color-secondary-100)
@@ -210,7 +680,7 @@
   &-detail
     text-align: right
     font-family: inherit
-    font-size: 1.2rem
+    font-size: 1.8rem
     font-weight: 400
     color: var(--color-white-100)
 
@@ -320,40 +790,30 @@ textarea::placeholder
 /**************************** FOOTER ****************************/
 .footer-flex-informations
   margin-top: 14rem
-  display: -webkit-box
-  display: -ms-flexbox
-  display: flex
-  gap: 3rem
-  place-content: center
+  display: grid
+  gap: 1.2rem
+  grid-auto-flow: column
+  justify-content: center
   color: var(--color-white-100)
-  margin-bottom: 1.5rem
+  margin-bottom: 2.5rem
 
 .footer-flex-logo
-  display: -webkit-box
-  display: -ms-flexbox
   display: flex
-  -webkit-box-align: center
-  -ms-flex-align: center
   align-items: center
-  -webkit-box-pack: center
-  -ms-flex-pack: center
   justify-content: center
-  -webkit-box-orient: vertical
-  -webkit-box-direction: normal
-  -ms-flex-direction: column
   flex-direction: column
-  gap: 1rem
+  gap: 2.5rem
   color: var(--color-white-100)
 
 .footer-information
-  font-size: 1.6rem
+  font-size: 1.5rem
   color: var(--color-white-100)
 
   &:hover
     color: var(--color-gray-100)
 
 .footer-copyrights
-  font-size: 1.6rem
+  font-size: 1.2rem
   color: var(--color-white-100)
 
 /**************************** POLICY ****************************/
@@ -461,6 +921,9 @@ textarea::placeholder
   .author
     font-size: 1.8rem
 
+  .right-block-women-card
+    width: 85%
+
 @media only screen and (max-width: 64.0625em)
   .container-grid-women
     min-height: 75%
@@ -517,17 +980,34 @@ textarea::placeholder
     font-size: 2rem
 
   .footer-information
-    font-size: 1.4rem
+    font-size: 1.35rem
 
   .footer-copyrights
-    font-size: 1.4rem
+    font-size: 1.35rem
 
 @media only screen and (max-width: 62.5em)
   html
     font-size: 50%
 
+  .right-block-women-card
+    padding: 4.5rem
+    margin-left: -1rem
+    width: 100%
+
+  .grid-50-50
+    grid-template-columns: 1fr
+
   .aboutus-description
     font-size: 2.6rem
+
+  .first-block
+    animation: none
+
+  .second-block
+    animation: none
+
+  .caption-about
+    margin-right: 10rem
 
 @media only screen and (max-width: 54.375em)
   .img
@@ -537,5 +1017,236 @@ textarea::placeholder
     & img
       width: 45rem
 
+  @keyframes rev-img
+    0%
+      left: 0
+      width: 0%
+
+    50%
+      width: 45rem
+      left: 0
+
+    100%
+      left: 45rem
+      width: 0
+
   .aboutus-description
     font-size: 2.6rem
+
+  .right-block-women-card
+    width: 100%
+
+  .grid-50-50
+    grid-template-columns: 1fr
+
+  .location-detail
+    text-align: center
+
+  .thoughts-caption
+    margin-top: 5rem
+
+  .aboutus-description
+    font-size: 1.9rem
+
+@media only screen and (max-width: 50.0625em)
+  .content
+    top: 75%
+    left: 30%
+
+  .img
+    top: 40%
+    right: 25%
+    transform: translate(50%, -50%)
+
+    & img
+      width: 40rem
+
+  @keyframes rev-img
+    0%
+      left: 0
+      width: 0%
+
+    50%
+      width: 40rem
+      left: 0
+
+    100%
+      left: 40rem
+      width: 0
+
+  .comments h3
+    font-size: 1.4rem
+
+  .aboutus-description
+    font-size: 1.6rem
+
+  .aboutus-container
+    padding: 0rem 5rem
+
+  .left-block-women-card
+    font-size: 1.7rem
+
+@media only screen and (max-width: 41.75em)
+  html
+    font-weight: 500
+
+  .content
+    top: 69%
+    left: 50%
+    padding: 5rem
+
+  .img
+    top: 31%
+    right: 41%
+    transform: translate(50%, -50%)
+
+    & img
+      width: 30rem
+
+  @keyframes rev-img
+    0%
+      left: 0
+      width: 0%
+
+    50%
+      width: 30rem
+      left: 0
+
+    100%
+      left: 30rem
+      width: 0
+
+  .grid-50-50
+    padding: 1rem
+
+  .heading
+    font-size: 3rem
+
+  .women-title
+    font-size: 3.2rem
+    top: 2rem
+
+  .caption-gallery
+    font-size: 3.6rem
+
+  .caption-about
+    font-size: 3.6rem
+
+  .location-caption
+    font-size: 3.6rem
+
+  .caption-menu
+    font-size: 3.6rem
+
+  .thoughts-caption
+    font-size: 3.6rem
+
+  .caption-testimonial
+    font-size: 3.6rem
+
+  .reservation-caption-up
+    font-size: 3.6rem
+
+@media only screen and (max-width: 41.75em)
+  #navbar
+    width: 3.4rem
+
+  #facebook
+    width: 3.4rem
+
+  #instagram
+    width: 3.4rem
+
+  .grid-50-50
+    padding: 2rem
+
+  .reservation-contactus
+    padding: 2rem
+
+  .left-block-women-card
+    min-height: 80vh
+    justify-self: center
+
+  .right-block-women-card
+    width: 100%
+    margin-left: 0rem
+    justify-self: center
+
+@media only screen and (max-width: 30.125em)
+  .grid-50-50
+    padding: 1rem
+
+  .left-block-women-card
+    min-height: 75vh
+    justify-self: center
+
+  .right-block-women-card
+    width: 85%
+    margin-left: 0rem
+    justify-self: center
+
+  .reservation-contactus
+    padding: 2rem
+
+  .container-grid-women
+    grid-template-columns: 1fr
+
+@media only screen and (max-width: 24.6875em)
+  .grid-50-50
+    padding: 1rem
+
+  html
+    font-size: 40%
+
+  .menu
+    position: absolute
+
+  .heading
+    font-size: 3rem
+
+  .women-title
+    left: 20%
+    font-size: 3.6rem
+
+  .caption-gallery
+    font-size: 3.6rem
+
+  .caption-about
+    font-size: 3rem
+
+  .location-caption
+    font-size: 3rem
+
+  .caption-menu
+    font-size: 3rem
+
+  .thoughts-caption
+    font-size: 3rem
+
+  .caption-testimonial
+    font-size: 3rem
+
+  .reservation-caption-up
+    font-size: 3rem
+
+  .aboutus-description
+    font-size: 1.6rem
+    padding: 0rem
+
+  .container-grid-women
+    grid-template-columns: 1fr
+
+  .left-block-women-card
+    min-height: 70vh
+    justify-self: center
+
+  .right-block-women-card
+    width: 85%
+    margin-left: 0rem
+    justify-self: center
+
+  #comment
+    padding: 2rem
+
+  #menu
+    padding: 3rem
