--- a/src/index.css
+++ b/src/index.css
@@ -38,11 +38,6 @@ body {
   overflow-x: hidden;
 }
 
-h1,
-h2 {
-  font-weight: 400;
-}
-
 ul,
 ol {
   list-style: none;
@@ -131,413 +126,137 @@ li {
   padding: 10rem;
 }
 
+/****************************  LOADING ANIMATION  ****************************/
+#logos {
+  stroke-dasharray: 3284;
+  stroke-dashoffset: 3284;
+  animation: loader 15s infinite;
+}
+
+.logo-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes loader {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+/****************************  NAVBAR  ****************************/
+#navbar {
+  width: 4rem;
+  height: 4rem;
+}
+
+.navbar {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 1.7rem 2.9rem;
+  align-items: center;
+}
 /****************************  HERO CONTENT  ****************************/
 .container-hero {
   width: 100%;
   height: 100vh;
 }
-
-.temp {
-  position: absolute;
-  width: 100%;
+.hero-slider-grid {
+  display: grid;
+  grid-template-columns: 55fr 45fr;
+}
+.content {
   height: 100vh;
-  background-color: var(--color-primary-100);
-  background-size: cover;
-  -webkit-animation: fadeOut 5s linear forwards;
-  animation: fadeOut 5s linear forwards;
-  opacity: 1;
+  background-color: var(--color-primary-200);
 }
 
-@-webkit-keyframes fadeOut {
-  0% {
-    opacity: 0;
-  }
-  40% {
-    opacity: 0;
-  }
-  41% {
-    opacity: 1;
-  }
-  91% {
-    opacity: 1;
-  }
-  92% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes fadeOut {
-  0% {
-    opacity: 0;
-  }
-  40% {
-    opacity: 0;
-  }
-  41% {
-    opacity: 1;
-  }
-  91% {
-    opacity: 1;
-  }
-  92% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-.first-block {
-  position: absolute;
-  width: 0;
+.content-hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
-  background-color: var(--color-white-200);
-  -webkit-animation: go-left 4s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards;
-  animation: go-left 4s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards;
-  left: 0;
-}
-
-@-webkit-keyframes go-left {
-  0% {
-    left: 0;
-    width: 0%;
-  }
-  50% {
-    left: 0;
-    width: 100%;
-  }
-  100% {
-    left: 100%;
-    width: 0;
-  }
-}
-@keyframes go-left {
-  0% {
-    left: 0;
-    width: 0%;
-  }
-  50% {
-    left: 0;
-    width: 100%;
-  }
-  100% {
-    left: 100%;
-    width: 0;
-  }
-}
-.second-block {
-  position: absolute;
-  width: 0;
-  height: 100vh;
-  background-color: var(--color-tertiary-200);
-  -webkit-animation: go-left 3.2s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards;
-  animation: go-left 3.2s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards;
-  -webkit-animation-delay: 3s;
-  animation-delay: 3s;
-}
-
-.loader {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-.loader ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.loader ul li {
-  display: inline-block;
-  color: var(--color-white-100);
-  font-family: inherit;
-  font-weight: bolder;
-  margin: 0 0.8rem;
-  font-size: 2rem;
-  text-transform: uppercase;
-  -webkit-animation: loadNow 4s ease-in-out forwards;
-  animation: loadNow 4s ease-in-out forwards;
-  opacity: 0;
-  -webkit-transform: translateX(0rem);
-  transform: translateX(0rem);
-}
-
-@-webkit-keyframes loadNow {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(8rem);
-    transform: translateX(8rem);
-  }
-  20% {
-    opacity: 1;
-    -webkit-transform: translateX(0rem);
-    transform: translateX(0rem);
-  }
-  80% {
-    opacity: 1;
-    -webkit-transform: translateX(0rem);
-    transform: translateX(0rem);
-  }
-  100% {
-    opacity: 0;
-    -webkit-transform: translateX(-8rem);
-    transform: translateX(-8rem);
-  }
-}
-@keyframes loadNow {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(8rem);
-    transform: translateX(8rem);
-  }
-  20% {
-    opacity: 1;
-    -webkit-transform: translateX(0rem);
-    transform: translateX(0rem);
-  }
-  80% {
-    opacity: 1;
-    -webkit-transform: translateX(0rem);
-    transform: translateX(0rem);
-  }
-  100% {
-    opacity: 0;
-    -webkit-transform: translateX(-8rem);
-    transform: translateX(-8rem);
-  }
-}
-.loader ul li:nth-child(1) {
-  -webkit-animation-delay: 1.05s;
-  animation-delay: 1.05s;
-}
-
-.loader ul li:nth-child(2) {
-  -webkit-animation-delay: 1.1s;
-  animation-delay: 1.1s;
-}
-
-.loader ul li:nth-child(3) {
-  -webkit-animation-delay: 1.15s;
-  animation-delay: 1.15s;
-}
-
-.loader ul li:nth-child(4) {
-  -webkit-animation-delay: 1.2s;
-  animation-delay: 1.2s;
-}
-
-.loader ul li:nth-child(5) {
-  -webkit-animation-delay: 1.25s;
-  animation-delay: 1.25s;
-}
-
-.loader ul li:nth-child(6) {
-  -webkit-animation-delay: 1.3s;
-  animation-delay: 1.3s;
-}
-
-.loader ul li:nth-child(7) {
-  -webkit-animation-delay: 1.35s;
-  animation-delay: 1.35s;
-}
-
-.loader ul li:nth-child(8) {
-  -webkit-animation-delay: 1.4s;
-  animation-delay: 1.4s;
-}
-
-.loader ul li:nth-child(9) {
-  -webkit-animation-delay: 1.45s;
-  animation-delay: 1.45s;
-}
-
-.loader ul li:nth-child(10) {
-  -webkit-animation-delay: 1.5s;
-  animation-delay: 1.5s;
-}
-
-.third-block {
-  position: absolute;
-  width: 0%;
-  height: 100%;
-  background: var(--color-primary-200);
-  -webkit-animation: expandNow 1.4s cubic-bezier(0.19, 1, 0.22, 1) forwards;
-  animation: expandNow 1.4s cubic-bezier(0.19, 1, 0.22, 1) forwards;
-  -webkit-animation-delay: 6.2s;
-  animation-delay: 6.2s;
-}
-
-@-webkit-keyframes expandNow {
-  0% {
-    width: 0%;
-  }
-  100% {
-    width: 64%;
-  }
+  background-color: var(--color-primary-200);
+  -webkit-animation: expandNow 2.3s cubic-bezier(0.19, 1, 0.22, 1) forwards;
+  animation: expandNow 2.3s cubic-bezier(0.19, 1, 0.22, 1) forwards;
 }
 @keyframes expandNow {
   0% {
     width: 0%;
   }
   100% {
-    width: 64%;
+    width: 100%;
   }
 }
-.menu {
-  position: absolute;
-  right: 0;
-  margin: 3rem;
-}
-
-.logo {
-  position: absolute;
-  left: 0;
-  margin: 2rem;
-}
-.logo img {
-  opacity: 0;
-  -webkit-animation: appearimg 0.1s linear forwards;
-  animation: appearimg 0.1s linear forwards;
-  -webkit-animation-delay: 6.4s;
-  animation-delay: 6.4s;
-}
-
-.content {
-  position: absolute;
-  width: 50rem;
-  top: 46%;
-  left: 28%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: left;
-}
-
-.heading {
-  font-family: "Great Vibes", cursive;
-  font-weight: bolder;
-  font-size: 4.2rem;
-  line-height: 1;
+.content-caption {
+  font-size: 6.4rem;
+  font-weight: 400;
   color: var(--color-secondary-100);
+  font-family: "Great Vibes", cursive;
 }
-
-.desc {
-  font-family: inherit;
-  font-weight: bolder;
-}
-.desc p {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-  color: var(--color-white-100);
+.content-detail {
+  padding: 1rem 5rem;
+  margin: 2.5rem 0;
   font-size: 2rem;
-  font-weight: 800;
-  line-height: 1.4;
-}
-
-.button-hero {
+  font-weight: 400;
+  line-height: 1.35;
   font-family: inherit;
-  border: none;
-  padding: 1.6rem 4rem;
-  letter-spacing: 0.2rem;
-  text-transform: uppercase;
-  background-color: var(--color-secondary-100);
-  cursor: pointer;
+  color: var(--color-white-100);
 }
-.button-hero:hover {
+.content-button {
+  width: 20rem;
+  cursor: pointer;
+  font-size: 1.7rem;
+  font-weight: 400;
+  color: var(--color-gray-100);
+  background-color: var(--color-primary-100);
+  border: solid 1px var(--color-secondary-100);
+  min-width: 50%;
+  padding: 1.5rem;
+  outline: none;
+  font-family: inherit;
+}
+.content-button:hover {
+  color: #000;
   background-color: var(--color-secondary-200);
 }
-
-.img img {
-  width: 50rem;
-  height: 100%;
+.content-img {
+  display: flex;
+  margin-left: -20rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
   opacity: 0;
-  -webkit-animation: appearimg 0.1s linear forwards;
-  animation: appearimg 0.1s linear forwards;
-  -webkit-animation-delay: 6.4s;
-  animation-delay: 6.4s;
+  -webkit-animation: appearimg 2s cubic-bezier(0.19, 1, 0.22, 1) forwards;
+  animation: appearimg 2s cubic-bezier(0.19, 1, 0.22, 1) forwards;
+  -webkit-animation-delay: 1.2s;
+  animation-delay: 1.2s;
 }
 
-.img {
-  position: absolute;
-  z-index: 1000;
-  top: 50%;
-  right: 14%;
-  -webkit-transform: translateY(-65%);
-  transform: translateY(-65%);
-}
-.img::after {
-  content: "";
-  top: 0;
-  left: 0;
-  width: 0%;
-  height: 100%;
-  position: absolute;
-  background: var(--color-tertiary-200);
-  -webkit-animation: rev-img 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
-  animation: rev-img 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
-  -webkit-animation-delay: 6s;
-  animation-delay: 6s;
-}
-
-@-webkit-keyframes rev-img {
-  0% {
-    left: 0;
-    width: 0%;
-  }
-  50% {
-    width: 50rem;
-    left: 0;
-  }
-  100% {
-    left: 50rem;
-    width: 0;
-  }
-}
-@keyframes rev-img {
-  0% {
-    left: 0;
-    width: 0%;
-  }
-  50% {
-    width: 50rem;
-    left: 0;
-  }
-  100% {
-    left: 50rem;
-    width: 0;
-  }
-}
-@-webkit-keyframes appearimg {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
 @keyframes appearimg {
-  0% {
+  1% {
+    transform: translateX(6rem);
     opacity: 0;
   }
+
   100% {
+    transform: translateY(0rem);
     opacity: 1;
   }
 }
-.media ul {
-  list-style: none;
-  position: absolute;
-  bottom: 0;
-  right: 2.4rem;
-  padding: 1rem;
+.hero-img {
+  width: 60rem;
+  height: 64rem;
 }
-.media ul li {
-  margin: 2.4rem 0;
-}
-
 /**************************** ABOUT US ****************************/
 .caption-about {
   font-size: 6.4rem;
+  font-weight: 400;
   color: var(--color-secondary-100);
   text-align: right;
   margin-right: 20rem;
@@ -556,11 +275,11 @@ li {
 }
 
 .aboutus-description {
-  font-size: 3.2rem;
+  font-size: 2.8rem;
   font-weight: 400;
   line-height: 1.32;
   font-family: inherit;
-  margin-bottom: 5rem;
+  margin-bottom: 12rem;
   color: var(--color-white-100);
 }
 .aboutus-description-thanks {
@@ -618,6 +337,7 @@ li {
 
 /**************************** GALLERY****************************/
 .caption-gallery {
+  font-weight: 400;
   font-size: 6.4rem;
   font-family: "Great Vibes", cursive;
   color: var(--color-secondary-100);
@@ -640,6 +360,7 @@ li {
 .caption-menu {
   padding: 0.5rem 0rem 0rem 0rem;
   font-size: 6.4rem;
+  font-weight: 400;
   color: var(--color-secondary-100);
   text-align: center;
   margin-top: 5rem;
@@ -674,6 +395,7 @@ li {
 /**************************** TESTIMONIALS ****************************/
 .caption-testimonial {
   font-size: 6.4rem;
+  font-weight: 400;
   color: var(--color-secondary-100);
   text-align: center;
   margin-top: 10rem;
@@ -1004,24 +726,17 @@ textarea::placeholder {
   .aboutus-description {
     font-size: 2.6rem;
   }
-  .img {
-    top: 50%;
-    right: 9%;
-  }
 }
 @media only screen and (max-width: 78.125em) {
-  .heading {
-    font-size: 3.6rem;
+  .hero-img {
+    width: 50rem;
+    height: 54rem;
   }
-  .desc p {
-    font-size: 1.8rem;
+  .content-caption {
+    font-size: 4.8rem;
   }
-  .button-hero {
-    padding: 1.4rem 3.6rem;
-  }
-  .img {
-    top: 50%;
-    right: 2%;
+  .content-img {
+    margin-left: -12rem;
   }
   .caption-about {
     font-size: 4.8rem;
@@ -1126,6 +841,18 @@ textarea::placeholder {
   html {
     font-size: 50%;
   }
+  .content-caption {
+    font-size: 4rem;
+  }
+  .content-detail {
+    font-size: 1.8rem;
+  }
+  .content-button {
+    width: 15rem;
+  }
+  .content-img {
+    margin-left: -9rem;
+  }
   .right-block-women-card {
     padding: 4.5rem;
     margin-left: -1rem;
@@ -1150,40 +877,12 @@ textarea::placeholder {
   }
 }
 @media only screen and (max-width: 54.375em) {
-  .img {
-    top: 50%;
-    right: 1%;
+  .hero-img {
+    width: 40rem;
+    height: 44rem;
   }
-  .img img {
-    width: 45rem;
-  }
-  @-webkit-keyframes rev-img {
-    0% {
-      left: 0;
-      width: 0%;
-    }
-    50% {
-      width: 45rem;
-      left: 0;
-    }
-    100% {
-      left: 45rem;
-      width: 0;
-    }
-  }
-  @keyframes rev-img {
-    0% {
-      left: 0;
-      width: 0%;
-    }
-    50% {
-      width: 45rem;
-      left: 0;
-    }
-    100% {
-      left: 45rem;
-      width: 0;
-    }
+  .content-img {
+    margin-left: -8.5rem;
   }
   .aboutus-description {
     font-size: 2.6rem;
@@ -1205,46 +904,8 @@ textarea::placeholder {
   }
 }
 @media only screen and (max-width: 50.0625em) {
-  .content {
-    top: 75%;
-    left: 30%;
-  }
-  .img {
-    top: 40%;
-    right: 25%;
-    -webkit-transform: translate(50%, -50%);
-    transform: translate(50%, -50%);
-  }
-  .img img {
-    width: 40rem;
-  }
-  @-webkit-keyframes rev-img {
-    0% {
-      left: 0;
-      width: 0%;
-    }
-    50% {
-      width: 40rem;
-      left: 0;
-    }
-    100% {
-      left: 40rem;
-      width: 0;
-    }
-  }
-  @keyframes rev-img {
-    0% {
-      left: 0;
-      width: 0%;
-    }
-    50% {
-      width: 40rem;
-      left: 0;
-    }
-    100% {
-      left: 40rem;
-      width: 0;
-    }
+  .content-img {
+    margin-left: -8rem;
   }
   .comments h3 {
     font-size: 1.4rem;
@@ -1260,53 +921,31 @@ textarea::placeholder {
   }
 }
 @media only screen and (max-width: 41.75em) {
+  #navbar {
+    width: 3.4rem;
+  }
   html {
     font-weight: 500;
   }
-  .content {
-    top: 69%;
-    left: 50%;
-    padding: 5rem;
+  .hero-slider-grid {
+    grid-template-columns: 1fr;
   }
-  .img {
-    top: 31%;
-    right: 41%;
-    -webkit-transform: translate(50%, -50%);
-    transform: translate(50%, -50%);
+  .container-hero {
+    height: 100%;
   }
-  .img img {
-    width: 30rem;
+  .content-hero {
+    height: 90vh;
   }
-  @-webkit-keyframes rev-img {
-    0% {
-      left: 0;
-      width: 0%;
-    }
-    50% {
-      width: 30rem;
-      left: 0;
-    }
-    100% {
-      left: 30rem;
-      width: 0;
-    }
+  .content-img {
+    height: 10vh;
+    margin-bottom: 30rem;
   }
-  @keyframes rev-img {
-    0% {
-      left: 0;
-      width: 0%;
-    }
-    50% {
-      width: 30rem;
-      left: 0;
-    }
-    100% {
-      left: 30rem;
-      width: 0;
-    }
+  .content-img {
+    margin-left: 0;
   }
+
   .grid-50-50 {
-    padding: 1rem;
+    padding: 2rem;
   }
   .heading {
     font-size: 3rem;
@@ -1336,39 +975,34 @@ textarea::placeholder {
   .reservation-caption-up {
     font-size: 3.6rem;
   }
-}
-@media only screen and (max-width: 41.75em) {
-  #navbar {
-    width: 3.4rem;
-  }
-  #facebook {
-    width: 3.4rem;
-  }
-  #instagram {
-    width: 3.4rem;
-  }
-  .grid-50-50 {
-    padding: 2rem;
-  }
   .reservation-contactus {
     padding: 2rem;
   }
   .left-block-women-card {
     min-height: 80vh;
+    width: 70%;
     justify-self: center;
   }
+  .women-title {
+    left: 24%;
+  }
   .right-block-women-card {
-    width: 100%;
+    width: 70%;
     margin-left: 0rem;
     justify-self: center;
   }
+  .container-grid-women {
+    grid-template-columns: 1fr;
+  }
 }
+
 @media only screen and (max-width: 30.125em) {
   .grid-50-50 {
     padding: 1rem;
   }
   .left-block-women-card {
-    min-height: 75vh;
+    min-height: 55vh;
+    width: 75%;
     justify-self: center;
   }
   .right-block-women-card {
@@ -1387,19 +1021,12 @@ textarea::placeholder {
   .grid-50-50 {
     padding: 1rem;
   }
-  html {
-    font-size: 40%;
+
+  .menu-grid {
+    gap: 4rem;
+    margin-top: 2rem;
   }
-  .menu {
-    position: absolute;
-  }
-  .heading {
-    font-size: 3rem;
-  }
-  .women-title {
-    left: 20%;
-    font-size: 3.6rem;
-  }
+
   .caption-gallery {
     font-size: 3.6rem;
   }
@@ -1429,7 +1056,7 @@ textarea::placeholder {
     grid-template-columns: 1fr;
   }
   .left-block-women-card {
-    min-height: 70vh;
+    min-height: 57vh;
     justify-self: center;
   }
   .right-block-women-card {
